crates/compiler/semantic/tests/common/snapshots/diagnostics__scoping::unused_variables::test_unused_but_assigned.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: scoping::unused_variables::test_unused_but_assigned"
---
Fixture: semantic_tests::scoping::unused_variables::test_unused_but_assigned
============================================================
Source code:

        fn test() {
            let unused = 10;
            unused = 20;
            return ();
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused'
   ╭─[ semantic_tests::scoping::unused_variables::test_unused_but_assigned:3:17 ]
   │
 3 │             let unused = 10;
   │                 ───┬──  
   │                    ╰──── Unused variable 'unused'
───╯
