crates/compiler/semantic/tests/common/snapshots/diagnostics__types::overflow_tests::test_expression_result_overflow.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: types::overflow_tests::test_expression_result_overflow"
---
Fixture: semantic_tests::types::overflow_tests::test_expression_result_overflow
============================================================
Source code:

        fn main() -> felt {
            let x: felt = 2147483650;
            return x;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: literal value 2147483650 is out of range for type felt (0-2147483647)
   ╭─[ semantic_tests::types::overflow_tests::test_expression_result_overflow:3:27 ]
   │
 3 │             let x: felt = 2147483650;
   │                           ─────┬────  
   │                                ╰────── literal value 2147483650 is out of range for type felt (0-2147483647)
   │                                │      
   │                                ╰────── felt can only hold values from 0 to 2147483647 (2^31 - 1)
───╯
