crates/compiler/semantic/tests/common/snapshots/diagnostics__types::return_type_inference::test_wrong_literal_type_still_errors.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: types::return_type_inference::test_wrong_literal_type_still_errors"
---
Fixture: semantic_tests::types::return_type_inference::test_wrong_literal_type_still_errors
============================================================
Source code:

        fn test() -> u32 {
            return 42felt;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Type mismatch in return statement. Function expects `u32`, but returning `felt`
   ╭─[ semantic_tests::types::return_type_inference::test_wrong_literal_type_still_errors:3:13 ]
   │
 2 │         fn test() -> u32 {
   │            ──┬─  
   │              ╰─── Function `test` declared here with return type `u32`
 3 │             return 42felt;
   │             ───────┬──────  
   │                    ╰──────── Type mismatch in return statement. Function expects `u32`, but returning `felt`
───╯
